<?xml version="1.0" encoding="UTF-8"?>
<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
        <relativePath/>
    </parent>
    <groupId>studio.ikara</groupId>
    <artifactId>config</artifactId>
    <version>1.1.0</version>
    <name>Config</name>
    <description>Config Server for ikara-studio</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <!-- directories -->
        <dir.main.java>src/main/java</dir.main.java>
        <dir.test.java>src/test/java</dir.test.java>
        <dir.resources>src/main/resources</dir.resources>

        <!-- open-source dependency versions -->
        <package.o.jib.version>3.4.6</package.o.jib.version>
        <package.o.palantir-java.format.version>2.90.0</package.o.palantir-java.format.version>
        <package.o.spring-cloud.version>2025.1.1</package.o.spring-cloud.version>
        <package.o.spotless.version>3.4.0</package.o.spotless.version>

        <!-- build -->
        <env.ENVIRONMENT>dev</env.ENVIRONMENT>
        <java.version>25</java.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${package.o.spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-config-server</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
        </repository>
    </repositories>
    <build>
        <plugins>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${package.o.jib.version}</version>
                <configuration>
                    <container>
                        <jvmFlags>
                            <jvmFlag>--sun-misc-unsafe-memory-access=allow</jvmFlag>
                        </jvmFlags>
                    </container>
                    <from>
                        <image>eclipse-temurin:25-jre-alpine</image>
                    </from>
                    <to>
                        <image>ghcr.io/ikara-life/config</image>
                        <tags>
                            <tag>${env.ENVIRONMENT}</tag>
                            <tag>${project.version}</tag>
                        </tags>
                    </to>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <jvmArguments>--sun-misc-unsafe-memory-access=allow</jvmArguments>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>spotless</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.diffplug.spotless</groupId>
                        <artifactId>spotless-maven-plugin</artifactId>
                        <version>${package.o.spotless.version}</version>
                        <configuration>
                            <java>
                                <includes>
                                    <include>${dir.main.java}/**/*.java</include>
                                    <include>${dir.test.java}/**/*.java</include>
                                </includes>
                                <palantirJavaFormat>
                                    <version>${package.o.palantir-java.format.version}</version>
                                    <style>PALANTIR</style>
                                </palantirJavaFormat>
                                <importOrder/>
                                <removeUnusedImports>
                                    <engine>cleanthat-javaparser-unnecessaryimport</engine>
                                </removeUnusedImports>
                                <formatAnnotations/>
                                <trimTrailingWhitespace/>
                                <endWithNewline/>
                                <toggleOffOn/>
                            </java>
                            <pom>
                                <includes>
                                    <include>pom.xml</include>
                                </includes>
                                <sortPom>
                                    <encoding>UTF-8</encoding>
                                    <expandEmptyElements>false</expandEmptyElements>
                                    <keepBlankLines>false</keepBlankLines>
                                    <nrOfIndentSpace>4</nrOfIndentSpace>
                                    <sortDependencies>scope,groupId,artifactId</sortDependencies>
                                    <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
                                    <sortDependencyManagement>groupId,artifactId</sortDependencyManagement>
                                    <sortExecutions>false</sortExecutions>
                                    <sortModules>true</sortModules>
                                    <sortPlugins>groupId,artifactId</sortPlugins>
                                    <sortProperties>true</sortProperties>
                                </sortPom>
                            </pom>
                            <yaml>
                                <includes>
                                    <include>${dir.resources}/*.yml</include>
                                    <include>${dir.resources}/*.yaml</include>
                                </includes>
                                <jackson>
                                    <features>
                                        <INDENT_OUTPUT>true</INDENT_OUTPUT>
                                        <ORDER_MAP_ENTRIES_BY_KEYS>true</ORDER_MAP_ENTRIES_BY_KEYS>
                                    </features>
                                    <yamlFeatures>
                                        <WRITE_DOC_START_MARKER>true</WRITE_DOC_START_MARKER>
                                        <MINIMIZE_QUOTES>true</MINIMIZE_QUOTES>
                                        <SPLIT_LINES>true</SPLIT_LINES>
                                    </yamlFeatures>
                                </jackson>
                                <trimTrailingWhitespace/>
                                <endWithNewline/>
                            </yaml>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>com.diffplug.spotless</groupId>
                                <artifactId>spotless-maven-plugin</artifactId>
                                <version>${package.o.spotless.version}</version>
                            </dependency>
                            <dependency>
                                <groupId>com.palantir.javaformat</groupId>
                                <artifactId>palantir-java-format</artifactId>
                                <version>${package.o.palantir-java.format.version}</version>
                            </dependency>
                        </dependencies>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>check</goal>
                                    <goal>apply</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
